2004-01-12  NAKAJIMA Mikio  <minakaji@osaka.email.ne.jp>

	* shimbun/sb-lotusex.el (shimbun-get-headers): Remove wrong
	argument HEADER.
	* shimbun/sb-muchy.el (shimbun-get-headers): Ditto.

2004-01-11  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* sb-bbc.el: Renamed from sb-bbc-rss.el.

	* w3m.el (w3m-safe-view-this-url): Bind `w3m-pop-up-windows' to
	nil locally, in order to keep MUA's window configuration.

	* shimbun/sb-cnet-rss.el: Add blog groups.
	(shimbun-cnet-rss-group-alist): New variable.
	(shimbun-cnet-rss-url, shimbun-cnet-rss-groups): Abolished.
	(shimbun-cnet-rss-content-start): Follow the change of the site
	design.
	(shimbun-cnet-rss-content-end): Ditto.
	(shimbun-groups): New method.
	(shimbun-index-url): Refer `shimbun-cnet-rss-group-alist' instead
	of `shimbun-cnet-rss-url'.
	(shimbun-clear-contents): New method.
	(shimbun-rss-build-message-id): Add a regular expression to create
	message IDs for blog groups.

	* w3m-proc.el (w3m-process-do-with-temp-buffer): Save the current
	buffer while executing an asynchronous body.

	* w3m-util.el (w3m-insert-string): Define its `edebug-form-spec'.

	* shimbun/sb-jpo.el (shimbun-make-contents): Abolished.
	(shimbun-jpo-contents): Abolished.
	(shimbun-clear-contents): New method.

	* shimbun/sb-kantei.el (shimbun-make-contents): Abolished.
	(shimbun-clear-contents): New method.

	* shimbun/sb-linux-ja.el (shimbun-linux-ja-remove-tags): Abolished.
	(shimbun-make-contents): Abolished.
	(shimbun-clear-contents): New method.

	* shimbun/sb-mainichi.el (shimbun-clear-contents): New method.
	(shimbun-make-contents): Simplified.
	(shimbun-mainichi-remove-tags): Abolished.

	* shimbun/sb-pcweb-column.el (shimbun-pcweb-column-groups): Follow
	the change of the site.
	(shimbun-pcweb-column-content-start): Ditto.
	(shimbun-index-url): Ditto.
	(shimbun-get-headers): Ditto.
	(shimbun-make-contents): Ditto.
	(shimbun-article): New method that converts old URLs to new ones.
